--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,26 @@
-name: "Run"
-on: [pull_request, push]
+name: "Build and Deploy"
+on: [push]
 
 jobs:
   defaults:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+    runs-on: ubuntu-latest
     steps:
-    - uses: mymindstorm/setup-emsdk@master
+      - uses: mymindstorm/setup-emsdk@master
+      - name: Verify
+        run: emcc -o public/wasm/iss-studio-core.js cpp/web-iss-studio.cpp -O3 -s WASM=1 -s NO_EXIT_RUNTIME=1 -s MODULARIZE=1 -s EXPORT_NAME=\"'createISSStudioCore'\" -s \"EXTRA_EXPORTED_RUNTIME_METHODS=['FS', 'ccall', 'cwrap', 'decompress', 'compress']\" -s FORCE_FILESYSTEM=1
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
 
-    - name: Verify
-      run: emcc -v
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        run: |
+          npm ci
+          npm run build
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4.3.0
+        with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: build # The folder the action should deploy.
