Update Github Actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,17 +2,13 @@ name: "Build and Deploy"
 on: [push]
 
 jobs:
-  defaults:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: mymindstorm/setup-emsdk@master
-      - name: Verify
-        run: ls -lha && pwd
-      - name: Build
-        run: emcc -o ../public/wasm/iss-studio-core.js ../cpp/web-iss-studio.cpp -O3 -s WASM=1 -s NO_EXIT_RUNTIME=1 -s MODULARIZE=1 -s EXPORT_NAME=\"'createISSStudioCore'\" -s \"EXTRA_EXPORTED_RUNTIME_METHODS=['FS', 'ccall', 'cwrap', 'decompress', 'compress']\" -s FORCE_FILESYSTEM=1
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Build WASM
+        uses: mymindstorm/setup-emsdk@master
+        run: emcc -o public/wasm/iss-studio-core.js cpp/web-iss-studio.cpp -O3 -s WASM=1 -s NO_EXIT_RUNTIME=1 -s MODULARIZE=1 -s EXPORT_NAME=\"'createISSStudioCore'\" -s \"EXTRA_EXPORTED_RUNTIME_METHODS=['FS', 'ccall', 'cwrap', 'decompress', 'compress']\" -s FORCE_FILESYSTEM=1
+        
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
